--- a/templates/login.html
+++ b/templates/login.html
@@ -50,21 +50,11 @@
         <div class="mt-4 d-flex flex-column gap-2">
 
           <!-- 카카오 -->
-         <a href="{{ url_for('kakao_login') }}"
-   style="
-        display:block;
-        width:100%;
-        background:#FEE500;
-        color:#3A1D1D;
-        font-weight:600;
-        padding:14px 0;
-        border-radius:12px;
-        text-align:center;
-        font-size:16px;">
-    <img src="{{ url_for('static', filename='img/kakao_icon.png') }}"
-         width="20" style="vertical-align:middle; margin-right:8px;">
+ <a href="/login/kakao" class="kakao-login-btn">
+    <img src="{{ url_for('static', filename='img/kakao.png') }}" alt="카카오">
     카카오톡으로 계속하기
 </a>
+
 
 
           <!-- 네이버 -->
