Add loading overlay and AI features

--- a/templates/login.html
+++ b/templates/login.html
@@ -65,7 +65,8 @@
       text-decoration:none;
    ">
     <img src="{{ url_for('static', filename='img/kakao_icon.png') }}"
-         style="width:28px; height:28px; margin-right:10px;">
+     width="28" height="28"
+     style="vertical-align:middle; margin-right:12px;">
     카카오톡으로 계속하기
 </a>
 
