Add loading overlay and AI features

--- a/templates/login.html
+++ b/templates/login.html
@@ -68,8 +68,9 @@
    ">
     
     <!-- 업로드한 이미지 사용 -->
-    <img src="/mnt/data/kakao_icon.png"
-         style="width:22px; height:22px; object-fit:contain;">
+    <img src="{{ url_for('static', filename='img/kakao_icon.png') }}"
+     style="width:22px; height:22px; object-fit:contain;">
+
     
     카카오톡으로 계속하기
 </a>
