--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
 <!-- 카카오 로그인 버튼 -->
 <!-- 카카오 로그인 -->
 <a href="{{ url_for('kakao_login') }}" style="display:block; width:100%; max-width:320px; margin:0 auto;">
-    <img src="{{ url_for('static', filename='img/kakao_login.png') }}"
+    <img src="{{ url_for('static', filename='img/kakao_icon.png') }}"
          alt="카카오 로그인"
          style="width:100%; display:block;">
 </a>
