--- a/templates/login.html
+++ b/templates/login.html
@@ -50,16 +50,11 @@
         <div class="mt-4 d-flex flex-column gap-2">
 
           <!-- 카카오 -->
-<!-- 카카오 로그인 버튼 -->
-<!-- 카카오 로그인 -->
-<a href="{{ url_for('kakao_login') }}" style="display:block; width:100%; max-width:320px; margin:0 auto;">
-    <img src="{{ url_for('static', filename='img/kakao_icon.png') }}"
-         alt="카카오 로그인"
-         style="width:100%; display:block;">
-</a>
-
-    
-    카카오톡으로 계속하기
+<a href="{{ url_for('kakao_login') }}" style="display:block; width:100%; border-radius:12px;">
+    <img 
+        src="{{ url_for('static', filename='img/kakao_login_medium_wide') }}" 
+        style="width:100%; height:auto; display:block; border-radius:12px;"
+    >
 </a>
 
 
