--- a/templates/login.html
+++ b/templates/login.html
@@ -50,12 +50,26 @@
         <div class="mt-4 d-flex flex-column gap-2">
 
           <!-- 카카오 -->
-<a href="{{ url_for('kakao_login') }}" style="display:block; width:100%; border-radius:12px;">
-    <img 
-        src="{{ url_for('static', filename='img/kakao_login_medium_wide') }}" 
-        style="width:100%; height:auto; display:block; border-radius:12px;"
-    >
+ <a href="{{ url_for('kakao_login') }}"
+   style="
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      width:100%;
+      background:#FEE500;
+      color:#3A1D1D;
+      font-weight:600;
+      border-radius:12px;
+      padding:12px 0;
+      margin-top:12px;
+      text-decoration:none;
+   ">
+    <img src="{{ url_for('static', filename='img/11.png') }}"
+     width="48" height="28"
+     style="vertical-align:middle; margin-right:12px;">
+    카카오톡으로 계속하기
 </a>
+
 
 
           <!-- 네이버 -->
